y.output
Terminals unused in grammar

   SINGLE_COMMENT
   MULTI_COMMENT
   PUNCTUATOR
   WS


State 50 conflicts: 1 shift/reduce
State 105 conflicts: 1 shift/reduce


Grammar

    0 $accept: translation_unit $end

    1 primary_expression: IDENTIFIER
    2                   | INTEGER_NO
    3                   | FLOAT_NO
    4                   | CHARACTER
    5                   | STRING
    6                   | '(' expression ')'

    7 postfix_expression: primary_expression
    8                   | postfix_expression '[' expression ']'
    9                   | postfix_expression '(' argument_expression_list ')'
   10                   | postfix_expression '(' ')'
   11                   | postfix_expression '.' IDENTIFIER
   12                   | postfix_expression ARROW IDENTIFIER
   13                   | postfix_expression INCREMENT
   14                   | postfix_expression DECREMENT
   15                   | '(' type_name ')' '{' initializer_list '}'
   16                   | '(' type_name ')' '{' initializer_list ',' '}'

   17 argument_expression_list: assignment_expression
   18                         | argument_expression_list ',' assignment_expression

   19 unary_expression: postfix_expression
   20                 | INCREMENT unary_expression
   21                 | DECREMENT unary_expression
   22                 | unary_operator cast_expression
   23                 | SIZEOF unary_expression
   24                 | SIZEOF '(' type_name ')'

   25 unary_operator: '&'
   26               | '*'
   27               | '+'
   28               | '-'
   29               | '~'
   30               | '!'

   31 cast_expression: unary_expression
   32                | '(' type_name ')' cast_expression

   33 multiplicative_expression: cast_expression
   34                          | multiplicative_expression '*' cast_expression
   35                          | multiplicative_expression '/' cast_expression
   36                          | multiplicative_expression '%' cast_expression

   37 additive_expression: multiplicative_expression
   38                    | additive_expression '+' multiplicative_expression
   39                    | additive_expression '-' multiplicative_expression

   40 shift_expression: additive_expression
   41                 | shift_expression LEFT_SHIFT additive_expression
   42                 | shift_expression RIGHT_SHIFT additive_expression

   43 relational_expression: shift_expression
   44                      | relational_expression '<' shift_expression
   45                      | relational_expression '>' shift_expression
   46                      | relational_expression LSOE shift_expression
   47                      | relational_expression GTOE shift_expression

   48 equality_expression: relational_expression
   49                    | equality_expression IS_EQUAL relational_expression
   50                    | relational_expression NOT_EQUAL relational_expression

   51 AND_expression: equality_expression
   52               | AND_expression '&' equality_expression

   53 exclusive_OR_expression: AND_expression
   54                        | exclusive_OR_expression '^' AND_expression

   55 inclusive_OR_expression: exclusive_OR_expression
   56                        | inclusive_OR_expression '|' exclusive_OR_expression

   57 logical_AND_expression: inclusive_OR_expression
   58                       | logical_AND_expression AND M inclusive_OR_expression

   59 logical_OR_expression: logical_AND_expression
   60                      | logical_OR_expression OR M logical_AND_expression

   61 conditional_expression: logical_OR_expression
   62                       | logical_OR_expression N '?' M expression N ':' M conditional_expression

   63 assignment_expression: conditional_expression
   64                      | unary_expression assignment_operator assignment_expression

   65 assignment_operator: '='
   66                    | MULTIPLY_EQUAL
   67                    | DIVIDE_EQUAL
   68                    | PERCENT_EQUAL
   69                    | PLUS_EQUAL
   70                    | MINUS_EQUAL
   71                    | LEFT_SHIFT_EQUAL
   72                    | RIGHT_SHIFT_EQUAL
   73                    | AND_EQUAL
   74                    | HAT_EQUAL
   75                    | OR_EQUAL

   76 expression: assignment_expression
   77           | expression ',' assignment_expression

   78 constant_expression: conditional_expression

   79 declaration: declaration_specifiers ';'
   80            | declaration_specifiers init_declarator_list ';'

   81 declaration_specifiers: storage_class_specifier
   82                       | storage_class_specifier declaration_specifiers
   83                       | type_specifier
   84                       | type_specifier declaration_specifiers
   85                       | type_qualifier
   86                       | type_qualifier declaration_specifiers
   87                       | function_specifier
   88                       | function_specifier declaration_specifiers

   89 init_declarator_list: init_declarator
   90                     | init_declarator_list ',' init_declarator

   91 init_declarator: declarator
   92                | declarator '=' initializer

   93 storage_class_specifier: EXTERN
   94                        | STATIC

   95 type_specifier: VOID
   96               | CHAR
   97               | SHORT
   98               | INT
   99               | LONG
  100               | FLOAT
  101               | DOUBLE

  102 specifier_qualifier_list: type_specifier specifier_qualifier_list_optional
  103                         | type_qualifier specifier_qualifier_list_optional

  104 specifier_qualifier_list_optional: specifier_qualifier_list
  105                                  | %empty

  106 type_qualifier: CONST
  107               | RESTRICT
  108               | VOLATILE

  109 function_specifier: INLINE

  110 declarator: pointer direct_declarator
  111           | direct_declarator

  112 direct_declarator: IDENTIFIER
  113                  | '(' declarator ')'
  114                  | direct_declarator '[' type_qualifier_list assignment_expression ']'
  115                  | direct_declarator '[' assignment_expression ']'
  116                  | direct_declarator '[' type_qualifier_list ']'
  117                  | direct_declarator '[' ']'
  118                  | direct_declarator '[' STATIC type_qualifier_list_optional assignment_expression ']'
  119                  | direct_declarator '[' type_qualifier_list STATIC assignment_expression ']'
  120                  | direct_declarator '[' type_qualifier_list_optional '*' ']'
  121                  | direct_declarator '(' parameter_type_list ')'
  122                  | direct_declarator '(' ')'
  123                  | direct_declarator '(' identifier_list ')'

  124 pointer: '*' type_qualifier_list
  125        | '*'
  126        | '*' type_qualifier_list pointer
  127        | '*' pointer

  128 type_qualifier_list: type_qualifier
  129                    | type_qualifier_list type_qualifier

  130 type_qualifier_list_optional: type_qualifier_list
  131                             | %empty

  132 parameter_type_list: parameter_list
  133                    | parameter_list ',' TRIPLE_DOT

  134 parameter_list: parameter_declaration
  135               | parameter_list ',' parameter_declaration

  136 parameter_declaration: declaration_specifiers declarator
  137                      | declaration_specifiers

  138 identifier_list: IDENTIFIER
  139                | identifier_list ',' IDENTIFIER

  140 type_name: specifier_qualifier_list

  141 initializer: assignment_expression
  142            | '{' initializer_list '}'
  143            | '{' initializer_list ',' '}'

  144 initializer_list: designation_optional initializer
  145                 | initializer_list ',' designation_optional initializer

  146 designation: designator_list '='

  147 designation_optional: designation
  148                     | %empty

  149 designator_list: designator
  150                | designator_list designator

  151 designator: '[' constant_expression ']'
  152           | '.' IDENTIFIER

  153 statement: labeled_statement
  154          | compound_statement
  155          | expression_statement
  156          | selection_statement
  157          | iteration_statement
  158          | jump_statement

  159 labeled_statement: IDENTIFIER ':' statement
  160                  | CASE constant_expression ':' statement
  161                  | DEFAULT ':' statement

  162 compound_statement: '{' '}'
  163                   | '{' block_item_list '}'

  164 block_item_list: block_item
  165                | block_item_list M block_item

  166 block_item: declaration
  167           | statement

  168 expression_statement: expression ';'
  169                     | ';'

  170 selection_statement: IF '(' expression N ')' M statement N
  171                    | IF '(' expression N ')' M statement N ELSE M statement
  172                    | SWITCH '(' expression ')' statement

  173 iteration_statement: WHILE M '(' expression N ')' M statement
  174                    | DO M statement M WHILE '(' expression N ')' ';'
  175                    | FOR '(' expression_statement M expression_statement N M expression N ')' M statement
  176                    | FOR '(' declaration expression_statement expression ')' statement

  177 jump_statement: GOTO IDENTIFIER ';'
  178               | CONTINUE ';'
  179               | BREAK ';'
  180               | RETURN expression ';'
  181               | RETURN ';'

  182 translation_unit: external_declaration
  183                 | translation_unit external_declaration

  184 external_declaration: function_definition
  185                     | declaration

  186 function_definition: declaration_specifiers declarator declaration_list compound_statement
  187                    | declaration_specifiers declarator F compound_statement

  188 declaration_list: declaration
  189                 | declaration_list declaration

  190 M: %empty

  191 N: %empty

  192 F: %empty


Terminals, with rules where they appear

$end (0) 0
'!' (33) 30
'%' (37) 36
'&' (38) 25 52
'(' (40) 6 9 10 15 16 24 32 113 121 122 123 170 171 172 173 174 175
    176
')' (41) 6 9 10 15 16 24 32 113 121 122 123 170 171 172 173 174 175
    176
'*' (42) 26 34 120 124 125 126 127
'+' (43) 27 38
',' (44) 16 18 77 90 133 135 139 143 145
'-' (45) 28 39
'.' (46) 11 152
'/' (47) 35
':' (58) 62 159 160 161
';' (59) 79 80 168 169 174 177 178 179 180 181
'<' (60) 44
'=' (61) 65 92 146
'>' (62) 45
'?' (63) 62
'[' (91) 8 114 115 116 117 118 119 120 151
']' (93) 8 114 115 116 117 118 119 120 151
'^' (94) 54
'{' (123) 15 16 142 143 162 163
'|' (124) 56
'}' (125) 15 16 142 143 162 163
'~' (126) 29
error (256)
ARROW (258) 12
INCREMENT (259) 13 20
CONTINUE (260) 178
DEFAULT (261) 161
DO (262) 174
DOUBLE (263) 101
ELSE (264) 171
EXTERN (265) 93
FLOAT (266) 100
FOR (267) 175 176
GOTO (268) 177
IF (269) 170 171
INLINE (270) 109
INT (271) 98
LONG (272) 99
RESTRICT (273) 107
RETURN (274) 180 181
SHORT (275) 97
SIZEOF (276) 23 24
STATIC (277) 94 118 119
SWITCH (278) 172
VOID (279) 95
VOLATILE (280) 108
DECREMENT (281) 14 21
LEFT_SHIFT (282) 41
RIGHT_SHIFT (283) 42
LSOE (284) 46
GTOE (285) 47
IS_EQUAL (286) 49
NOT_EQUAL (287) 50
AND (288) 58
OR (289) 60
TRIPLE_DOT (290) 133
MULTIPLY_EQUAL (291) 66
DIVIDE_EQUAL (292) 67
PERCENT_EQUAL (293) 68
PLUS_EQUAL (294) 69
MINUS_EQUAL (295) 70
LEFT_SHIFT_EQUAL (296) 71
RIGHT_SHIFT_EQUAL (297) 72
AND_EQUAL (298) 73
HAT_EQUAL (299) 74
OR_EQUAL (300) 75
BREAK (301) 179
CASE (302) 160
CHAR (303) 96
CONST (304) 106
WHILE (305) 173 174
SINGLE_COMMENT (306)
MULTI_COMMENT (307)
IDENTIFIER (308) 1 11 12 112 138 139 152 159 177
INTEGER_NO (309) 2
FLOAT_NO (310) 3
CHARACTER (311) 4
STRING (312) 5
PUNCTUATOR (313)
WS (314)
CONFLICTIVE_IF (315)


Nonterminals, with rules where they appear

$accept (85)
    on left: 0
primary_expression (86)
    on left: 1 2 3 4 5 6, on right: 7
postfix_expression (87)
    on left: 7 8 9 10 11 12 13 14 15 16, on right: 8 9 10 11 12 13
    14 19
argument_expression_list (88)
    on left: 17 18, on right: 9 18
unary_expression (89)
    on left: 19 20 21 22 23 24, on right: 20 21 23 31 64
unary_operator (90)
    on left: 25 26 27 28 29 30, on right: 22
cast_expression (91)
    on left: 31 32, on right: 22 32 33 34 35 36
multiplicative_expression (92)
    on left: 33 34 35 36, on right: 34 35 36 37 38 39
additive_expression (93)
    on left: 37 38 39, on right: 38 39 40 41 42
shift_expression (94)
    on left: 40 41 42, on right: 41 42 43 44 45 46 47
relational_expression (95)
    on left: 43 44 45 46 47, on right: 44 45 46 47 48 49 50
equality_expression (96)
    on left: 48 49 50, on right: 49 51 52
AND_expression (97)
    on left: 51 52, on right: 52 53 54
exclusive_OR_expression (98)
    on left: 53 54, on right: 54 55 56
inclusive_OR_expression (99)
    on left: 55 56, on right: 56 57 58
logical_AND_expression (100)
    on left: 57 58, on right: 58 59 60
logical_OR_expression (101)
    on left: 59 60, on right: 60 61 62
conditional_expression (102)
    on left: 61 62, on right: 62 63 78
assignment_expression (103)
    on left: 63 64, on right: 17 18 64 76 77 114 115 118 119 141
assignment_operator (104)
    on left: 65 66 67 68 69 70 71 72 73 74 75, on right: 64
expression (105)
    on left: 76 77, on right: 6 8 62 77 168 170 171 172 173 174 175
    176 180
constant_expression (106)
    on left: 78, on right: 151 160
declaration (107)
    on left: 79 80, on right: 166 176 185 188 189
declaration_specifiers (108)
    on left: 81 82 83 84 85 86 87 88, on right: 79 80 82 84 86 88 136
    137 186 187
init_declarator_list (109)
    on left: 89 90, on right: 80 90
init_declarator (110)
    on left: 91 92, on right: 89 90
storage_class_specifier (111)
    on left: 93 94, on right: 81 82
type_specifier (112)
    on left: 95 96 97 98 99 100 101, on right: 83 84 102
specifier_qualifier_list (113)
    on left: 102 103, on right: 104 140
specifier_qualifier_list_optional (114)
    on left: 104 105, on right: 102 103
type_qualifier (115)
    on left: 106 107 108, on right: 85 86 103 128 129
function_specifier (116)
    on left: 109, on right: 87 88
declarator (117)
    on left: 110 111, on right: 91 92 113 136 186 187
direct_declarator (118)
    on left: 112 113 114 115 116 117 118 119 120 121 122 123, on right:
    110 111 114 115 116 117 118 119 120 121 122 123
pointer (119)
    on left: 124 125 126 127, on right: 110 126 127
type_qualifier_list (120)
    on left: 128 129, on right: 114 116 119 124 126 129 130
type_qualifier_list_optional (121)
    on left: 130 131, on right: 118 120
parameter_type_list (122)
    on left: 132 133, on right: 121
parameter_list (123)
    on left: 134 135, on right: 132 133 135
parameter_declaration (124)
    on left: 136 137, on right: 134 135
identifier_list (125)
    on left: 138 139, on right: 123 139
type_name (126)
    on left: 140, on right: 15 16 24 32
initializer (127)
    on left: 141 142 143, on right: 92 144 145
initializer_list (128)
    on left: 144 145, on right: 15 16 142 143 145
designation (129)
    on left: 146, on right: 147
designation_optional (130)
    on left: 147 148, on right: 144 145
designator_list (131)
    on left: 149 150, on right: 146 150
designator (132)
    on left: 151 152, on right: 149 150
statement (133)
    on left: 153 154 155 156 157 158, on right: 159 160 161 167 170
    171 172 173 174 175 176
labeled_statement (134)
    on left: 159 160 161, on right: 153
compound_statement (135)
    on left: 162 163, on right: 154 186 187
block_item_list (136)
    on left: 164 165, on right: 163 165
block_item (137)
    on left: 166 167, on right: 164 165
expression_statement (138)
    on left: 168 169, on right: 155 175 176
selection_statement (139)
    on left: 170 171 172, on right: 156
iteration_statement (140)
    on left: 173 174 175 176, on right: 157
jump_statement (141)
    on left: 177 178 179 180 181, on right: 158
translation_unit (142)
    on left: 182 183, on right: 0 183
external_declaration (143)
    on left: 184 185, on right: 182 183
function_definition (144)
    on left: 186 187, on right: 184
declaration_list (145)
    on left: 188 189, on right: 186 189
M (146)
    on left: 190, on right: 58 60 62 165 170 171 173 174 175
N (147)
    on left: 191, on right: 62 170 171 173 174 175
F (148)
    on left: 192, on right: 187


State 0

    0 $accept: . translation_unit $end

    DOUBLE    shift, and go to state 1
    EXTERN    shift, and go to state 2
    FLOAT     shift, and go to state 3
    INLINE    shift, and go to state 4
    INT       shift, and go to state 5
    LONG      shift, and go to state 6
    RESTRICT  shift, and go to state 7
    SHORT     shift, and go to state 8
    STATIC    shift, and go to state 9
    VOID      shift, and go to state 10
    VOLATILE  shift, and go to state 11
    CHAR      shift, and go to state 12
    CONST     shift, and go to state 13

    declaration              go to state 14
    declaration_specifiers   go to state 15
    storage_class_specifier  go to state 16
    type_specifier           go to state 17
    type_qualifier           go to state 18
    function_specifier       go to state 19
    translation_unit         go to state 20
    external_declaration     go to state 21
    function_definition      go to state 22


State 1

  101 type_specifier: DOUBLE .

    $default  reduce using rule 101 (type_specifier)


State 2

   93 storage_class_specifier: EXTERN .

    $default  reduce using rule 93 (storage_class_specifier)


State 3

  100 type_specifier: FLOAT .

    $default  reduce using rule 100 (type_specifier)


State 4

  109 function_specifier: INLINE .

    $default  reduce using rule 109 (function_specifier)


State 5

   98 type_specifier: INT .

    $default  reduce using rule 98 (type_specifier)


State 6

   99 type_specifier: LONG .

    $default  reduce using rule 99 (type_specifier)


State 7

  107 type_qualifier: RESTRICT .

    $default  reduce using rule 107 (type_qualifier)


State 8

   97 type_specifier: SHORT .

    $default  reduce using rule 97 (type_specifier)


State 9

   94 storage_class_specifier: STATIC .

    $default  reduce using rule 94 (storage_class_specifier)


State 10

   95 type_specifier: VOID .

    $default  reduce using rule 95 (type_specifier)


State 11

  108 type_qualifier: VOLATILE .

    $default  reduce using rule 108 (type_qualifier)


State 12

   96 type_specifier: CHAR .

    $default  reduce using rule 96 (type_specifier)


State 13

  106 type_qualifier: CONST .

    $default  reduce using rule 106 (type_qualifier)


State 14

  185 external_declaration: declaration .

    $default  reduce using rule 185 (external_declaration)


State 15

   79 declaration: declaration_specifiers . ';'
   80            | declaration_specifiers . init_declarator_list ';'
  186 function_definition: declaration_specifiers . declarator declaration_list compound_statement
  187                    | declaration_specifiers . declarator F compound_statement

    IDENTIFIER  shift, and go to state 23
    '('         shift, and go to state 24
    '*'         shift, and go to state 25
    ';'         shift, and go to state 26

    init_declarator_list  go to state 27
    init_declarator       go to state 28
    declarator            go to state 29
    direct_declarator     go to state 30
    pointer               go to state 31


State 16

   81 declaration_specifiers: storage_class_specifier .
   82                       | storage_class_specifier . declaration_specifiers

    DOUBLE    shift, and go to state 1
    EXTERN    shift, and go to state 2
    FLOAT     shift, and go to state 3
    INLINE    shift, and go to state 4
    INT       shift, and go to state 5
    LONG      shift, and go to state 6
    RESTRICT  shift, and go to state 7
    SHORT     shift, and go to state 8
    STATIC    shift, and go to state 9
    VOID      shift, and go to state 10
    VOLATILE  shift, and go to state 11
    CHAR      shift, and go to state 12
    CONST     shift, and go to state 13

    $default  reduce using rule 81 (declaration_specifiers)

    declaration_specifiers   go to state 32
    storage_class_specifier  go to state 16
    type_specifier           go to state 17
    type_qualifier           go to state 18
    function_specifier       go to state 19


State 17

   83 declaration_specifiers: type_specifier .
   84                       | type_specifier . declaration_specifiers

    DOUBLE    shift, and go to state 1
    EXTERN    shift, and go to state 2
    FLOAT     shift, and go to state 3
    INLINE    shift, and go to state 4
    INT       shift, and go to state 5
    LONG      shift, and go to state 6
    RESTRICT  shift, and go to state 7
    SHORT     shift, and go to state 8
    STATIC    shift, and go to state 9
    VOID      shift, and go to state 10
    VOLATILE  shift, and go to state 11
    CHAR      shift, and go to state 12
    CONST     shift, and go to state 13

    $default  reduce using rule 83 (declaration_specifiers)

    declaration_specifiers   go to state 33
    storage_class_specifier  go to state 16
    type_specifier           go to state 17
    type_qualifier           go to state 18
    function_specifier       go to state 19


State 18

   85 declaration_specifiers: type_qualifier .
   86                       | type_qualifier . declaration_specifiers

    DOUBLE    shift, and go to state 1
    EXTERN    shift, and go to state 2
    FLOAT     shift, and go to state 3
    INLINE    shift, and go to state 4
    INT       shift, and go to state 5
    LONG      shift, and go to state 6
    RESTRICT  shift, and go to state 7
    SHORT     shift, and go to state 8
    STATIC    shift, and go to state 9
    VOID      shift, and go to state 10
    VOLATILE  shift, and go to state 11
    CHAR      shift, and go to state 12
    CONST     shift, and go to state 13

    $default  reduce using rule 85 (declaration_specifiers)

    declaration_specifiers   go to state 34
    storage_class_specifier  go to state 16
    type_specifier           go to state 17
    type_qualifier           go to state 18
    function_specifier       go to state 19


State 19

   87 declaration_specifiers: function_specifier .
   88                       | function_specifier . declaration_specifiers

    DOUBLE    shift, and go to state 1
    EXTERN    shift, and go to state 2
    FLOAT     shift, and go to state 3
    INLINE    shift, and go to state 4
    INT       shift, and go to state 5
    LONG      shift, and go to state 6
    RESTRICT  shift, and go to state 7
    SHORT     shift, and go to state 8
    STATIC    shift, and go to state 9
    VOID      shift, and go to state 10
    VOLATILE  shift, and go to state 11
    CHAR      shift, and go to state 12
    CONST     shift, and go to state 13

    $default  reduce using rule 87 (declaration_specifiers)

    declaration_specifiers   go to state 35
    storage_class_specifier  go to state 16
    type_specifier           go to state 17
    type_qualifier           go to state 18
    function_specifier       go to state 19


State 20

    0 $accept: translation_unit . $end
  183 translation_unit: translation_unit . external_declaration

    $end      shift, and go to state 36
    DOUBLE    shift, and go to state 1
    EXTERN    shift, and go to state 2
    FLOAT     shift, and go to state 3
    INLINE    shift, and go to state 4
    INT       shift, and go to state 5
    LONG      shift, and go to state 6
    RESTRICT  shift, and go to state 7
    SHORT     shift, and go to state 8
    STATIC    shift, and go to state 9
    VOID      shift, and go to state 10
    VOLATILE  shift, and go to state 11
    CHAR      shift, and go to state 12
    CONST     shift, and go to state 13

    declaration              go to state 14
    declaration_specifiers   go to state 15
    storage_class_specifier  go to state 16
    type_specifier           go to state 17
    type_qualifier           go to state 18
    function_specifier       go to state 19
    external_declaration     go to state 37
    function_definition      go to state 22


State 21

  182 translation_unit: external_declaration .

    $default  reduce using rule 182 (translation_unit)


State 22

  184 external_declaration: function_definition .

    $default  reduce using rule 184 (external_declaration)


State 23

  112 direct_declarator: IDENTIFIER .

    $default  reduce using rule 112 (direct_declarator)


State 24

  113 direct_declarator: '(' . declarator ')'

    IDENTIFIER  shift, and go to state 23
    '('         shift, and go to state 24
    '*'         shift, and go to state 25

    declarator         go to state 38
    direct_declarator  go to state 30
    pointer            go to state 31


State 25

  124 pointer: '*' . type_qualifier_list
  125        | '*' .
  126        | '*' . type_qualifier_list pointer
  127        | '*' . pointer

    RESTRICT  shift, and go to state 7
    VOLATILE  shift, and go to state 11
    CONST     shift, and go to state 13
    '*'       shift, and go to state 25

    $default  reduce using rule 125 (pointer)

    type_qualifier       go to state 39
    pointer              go to state 40
    type_qualifier_list  go to state 41


State 26

   79 declaration: declaration_specifiers ';' .

    $default  reduce using rule 79 (declaration)


State 27

   80 declaration: declaration_specifiers init_declarator_list . ';'
   90 init_declarator_list: init_declarator_list . ',' init_declarator

    ','  shift, and go to state 42
    ';'  shift, and go to state 43


State 28

   89 init_declarator_list: init_declarator .

    $default  reduce using rule 89 (init_declarator_list)


State 29

   91 init_declarator: declarator .
   92                | declarator . '=' initializer
  186 function_definition: declaration_specifiers declarator . declaration_list compound_statement
  187                    | declaration_specifiers declarator . F compound_statement

    DOUBLE    shift, and go to state 1
    EXTERN    shift, and go to state 2
    FLOAT     shift, and go to state 3
    INLINE    shift, and go to state 4
    INT       shift, and go to state 5
    LONG      shift, and go to state 6
    RESTRICT  shift, and go to state 7
    SHORT     shift, and go to state 8
    STATIC    shift, and go to state 9
    VOID      shift, and go to state 10
    VOLATILE  shift, and go to state 11
    CHAR      shift, and go to state 12
    CONST     shift, and go to state 13
    '='       shift, and go to state 44

    '{'       reduce using rule 192 (F)
    $default  reduce using rule 91 (init_declarator)

    declaration              go to state 45
    declaration_specifiers   go to state 46
    storage_class_specifier  go to state 16
    type_specifier           go to state 17
    type_qualifier           go to state 18
    function_specifier       go to state 19
    declaration_list         go to state 47
    F                        go to state 48


State 30

  111 declarator: direct_declarator .
  114 direct_declarator: direct_declarator . '[' type_qualifier_list assignment_expression ']'
  115                  | direct_declarator . '[' assignment_expression ']'
  116                  | direct_declarator . '[' type_qualifier_list ']'
  117                  | direct_declarator . '[' ']'
  118                  | direct_declarator . '[' STATIC type_qualifier_list_optional assignment_expression ']'
  119                  | direct_declarator . '[' type_qualifier_list STATIC assignment_expression ']'
  120                  | direct_declarator . '[' type_qualifier_list_optional '*' ']'
  121                  | direct_declarator . '(' parameter_type_list ')'
  122                  | direct_declarator . '(' ')'
  123                  | direct_declarator . '(' identifier_list ')'

    '('  shift, and go to state 49
    '['  shift, and go to state 50

    $default  reduce using rule 111 (declarator)


State 31

  110 declarator: pointer . direct_declarator

    IDENTIFIER  shift, and go to state 23
    '('         shift, and go to state 24

    direct_declarator  go to state 51


State 32

   82 declaration_specifiers: storage_class_specifier declaration_specifiers .

    $default  reduce using rule 82 (declaration_specifiers)


State 33

   84 declaration_specifiers: type_specifier declaration_specifiers .

    $default  reduce using rule 84 (declaration_specifiers)


State 34

   86 declaration_specifiers: type_qualifier declaration_specifiers .

    $default  reduce using rule 86 (declaration_specifiers)


State 35

   88 declaration_specifiers: function_specifier declaration_specifiers .

    $default  reduce using rule 88 (declaration_specifiers)


State 36

    0 $accept: translation_unit $end .

    $default  accept


State 37

  183 translation_unit: translation_unit external_declaration .

    $default  reduce using rule 183 (translation_unit)


State 38

  113 direct_declarator: '(' declarator . ')'

    ')'  shift, and go to state 52


State 39

  128 type_qualifier_list: type_qualifier .

    $default  reduce using rule 128 (type_qualifier_list)


State 40

  127 pointer: '*' pointer .

    $default  reduce using rule 127 (pointer)


State 41

  124 pointer: '*' type_qualifier_list .
  126        | '*' type_qualifier_list . pointer
  129 type_qualifier_list: type_qualifier_list . type_qualifier

    RESTRICT  shift, and go to state 7
    VOLATILE  shift, and go to state 11
    CONST     shift, and go to state 13
    '*'       shift, and go to state 25

    $default  reduce using rule 124 (pointer)

    type_qualifier  go to state 53
    pointer         go to state 54


State 42

   90 init_declarator_list: init_declarator_list ',' . init_declarator

    IDENTIFIER  shift, and go to state 23
    '('         shift, and go to state 24
    '*'         shift, and go to state 25

    init_declarator    go to state 55
    declarator         go to state 56
    direct_declarator  go to state 30
    pointer            go to state 31


State 43

   80 declaration: declaration_specifiers init_declarator_list ';' .

    $default  reduce using rule 80 (declaration)


State 44

   92 init_declarator: declarator '=' . initializer

    INCREMENT   shift, and go to state 57
    SIZEOF      shift, and go to state 58
    DECREMENT   shift, and go to state 59
    IDENTIFIER  shift, and go to state 60
    INTEGER_NO  shift, and go to state 61
    FLOAT_NO    shift, and go to state 62
    CHARACTER   shift, and go to state 63
    STRING      shift, and go to state 64
    '('         shift, and go to state 65
    '{'         shift, and go to state 66
    '&'         shift, and go to state 67
    '*'         shift, and go to state 68
    '+'         shift, and go to state 69
    '-'         shift, and go to state 70
    '~'         shift, and go to state 71
    '!'         shift, and go to state 72

    primary_expression         go to state 73
    postfix_expression         go to state 74
    unary_expression           go to state 75
    unary_operator             go to state 76
    cast_expression            go to state 77
    multiplicative_expression  go to state 78
    additive_expression        go to state 79
    shift_expression           go to state 80
    relational_expression      go to state 81
    equality_expression        go to state 82
    AND_expression             go to state 83
    exclusive_OR_expression    go to state 84
    inclusive_OR_expression    go to state 85
    logical_AND_expression     go to state 86
    logical_OR_expression      go to state 87
    conditional_expression     go to state 88
    assignment_expression      go to state 89
    initializer                go to state 90


State 45

  188 declaration_list: declaration .

    $default  reduce using rule 188 (declaration_list)


State 46

   79 declaration: declaration_specifiers . ';'
   80            | declaration_specifiers . init_declarator_list ';'

    IDENTIFIER  shift, and go to state 23
    '('         shift, and go to state 24
    '*'         shift, and go to state 25
    ';'         shift, and go to state 26

    init_declarator_list  go to state 27
    init_declarator       go to state 28
    declarator            go to state 56
    direct_declarator     go to state 30
    pointer               go to state 31


State 47

  186 function_definition: declaration_specifiers declarator declaration_list . compound_statement
  189 declaration_list: declaration_list . declaration

    DOUBLE    shift, and go to state 1
    EXTERN    shift, and go to state 2
    FLOAT     shift, and go to state 3
    INLINE    shift, and go to state 4
    INT       shift, and go to state 5
    LONG      shift, and go to state 6
    RESTRICT  shift, and go to state 7
    SHORT     shift, and go to state 8
    STATIC    shift, and go to state 9
    VOID      shift, and go to state 10
    VOLATILE  shift, and go to state 11
    CHAR      shift, and go to state 12
    CONST     shift, and go to state 13
    '{'       shift, and go to state 91

    declaration              go to state 92
    declaration_specifiers   go to state 46
    storage_class_specifier  go to state 16
    type_specifier           go to state 17
    type_qualifier           go to state 18
    function_specifier       go to state 19
    compound_statement       go to state 93


State 48

  187 function_definition: declaration_specifiers declarator F . compound_statement

    '{'  shift, and go to state 91

    compound_statement  go to state 94


State 49

  121 direct_declarator: direct_declarator '(' . parameter_type_list ')'
  122                  | direct_declarator '(' . ')'
  123                  | direct_declarator '(' . identifier_list ')'

    DOUBLE      shift, and go to state 1
    EXTERN      shift, and go to state 2
    FLOAT       shift, and go to state 3
    INLINE      shift, and go to state 4
    INT         shift, and go to state 5
    LONG        shift, and go to state 6
    RESTRICT    shift, and go to state 7
    SHORT       shift, and go to state 8
    STATIC      shift, and go to state 9
    VOID        shift, and go to state 10
    VOLATILE    shift, and go to state 11
    CHAR        shift, and go to state 12
    CONST       shift, and go to state 13
    IDENTIFIER  shift, and go to state 95
    ')'         shift, and go to state 96

    declaration_specifiers   go to state 97
    storage_class_specifier  go to state 16
    type_specifier           go to state 17
    type_qualifier           go to state 18
    function_specifier       go to state 19
    parameter_type_list      go to state 98
    parameter_list           go to state 99
    parameter_declaration    go to state 100
    identifier_list          go to state 101


State 50

  114 direct_declarator: direct_declarator '[' . type_qualifier_list assignment_expression ']'
  115                  | direct_declarator '[' . assignment_expression ']'
  116                  | direct_declarator '[' . type_qualifier_list ']'
  117                  | direct_declarator '[' . ']'
  118                  | direct_declarator '[' . STATIC type_qualifier_list_optional assignment_expression ']'
  119                  | direct_declarator '[' . type_qualifier_list STATIC assignment_expression ']'
  120                  | direct_declarator '[' . type_qualifier_list_optional '*' ']'

    INCREMENT   shift, and go to state 57
    RESTRICT    shift, and go to state 7
    SIZEOF      shift, and go to state 58
    STATIC      shift, and go to state 102
    VOLATILE    shift, and go to state 11
    DECREMENT   shift, and go to state 59
    CONST       shift, and go to state 13
    IDENTIFIER  shift, and go to state 60
    INTEGER_NO  shift, and go to state 61
    FLOAT_NO    shift, and go to state 62
    CHARACTER   shift, and go to state 63
    STRING      shift, and go to state 64
    '('         shift, and go to state 65
    ']'         shift, and go to state 103
    '&'         shift, and go to state 67
    '*'         shift, and go to state 68
    '+'         shift, and go to state 69
    '-'         shift, and go to state 70
    '~'         shift, and go to state 71
    '!'         shift, and go to state 72

    '*'  [reduce using rule 131 (type_qualifier_list_optional)]

    primary_expression            go to state 73
    postfix_expression            go to state 74
    unary_expression              go to state 75
    unary_operator                go to state 76
    cast_expression               go to state 77
    multiplicative_expression     go to state 78
    additive_expression           go to state 79
    shift_expression              go to state 80
    relational_expression         go to state 81
    equality_expression           go to state 82
    AND_expression                go to state 83
    exclusive_OR_expression       go to state 84
    inclusive_OR_expression       go to state 85
    logical_AND_expression        go to state 86
    logical_OR_expression         go to state 87
    conditional_expression        go to state 88
    assignment_expression         go to state 104
    type_qualifier                go to state 39
    type_qualifier_list           go to state 105
    type_qualifier_list_optional  go to state 106


State 51
